[package]
name = "wdm-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
sha2 = "0.10"
zip = "0.5"
tokio = { version = "1", features = ["full"] }
semver = "1.0"
