[package]
name = "wdm"
description = "Decentralized WordPress Plugin Dependency Manager"
version = "0.1.0"
authors = ["Vicente Canales <vicente@canales.io>"]
edition = "2021"
license-file = "LICENSE"
exclude = ["wp-content", "wdm.yml", "wdm.lock", ".wdm-cache"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
sha2 = "0.10"
reqwest = { version = "0.11", features = ["blocking", "json"] }
zip = "0.6"

[[bin]]
name = "wdm"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
tempdir = "0.3"
